--- a/index.html
+++ b/index.html
@@ -9,10 +9,79 @@
 </head>
 
 <body>
+    <canvas id="canvas" width="100" height="100"></canvas>
+    <script>
+        //划线
+        let canvas = document.getElementById("canvas");
+        canvas.width = document.documentElement.clientWidth
+        canvas.height = document.documentElement.clientHeight
+        let ctx = canvas.getContext("2d");
+        let painting = false
+        ctx.fillStyle = "black";
+        ctx.strokeStyle = 'none'
 
+        canvas.onmousedown = () => {
+            painting = true
+        }
+
+        canvas.onmousemove = (e) => {
+            if (painting === true) {
+                ctx.beginPath();
+                ctx.arc(e.clientX - 5, e.clientY - 5, 10, 0, 2 * Math.PI);
+                ctx.stroke();
+                ctx.fill();
+                // ctx.fillRect(e.clientX , e.clientY, 10, 10);
+            } else {
+                console.log('什么都没有！！！')
+            }
+        }
+        canvas.onmouseup = () => {
+            painting = false
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+        // canvas.onmousemove = (e) => {
+        //     // console.log(e.clientX) //获取鼠标位置  x坐标
+        //     // console.log(e.clientY) //获取鼠标位置  y坐标
+
+        //     ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10);
+
+        // }
+        // //console.log(document.body.clientWidth)
+
+    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ***div模拟canvas画板***
     <div id="canvas"></div>
     <script>
-        canvas.onclick = (e) => {
+        // canvas.onclick = (e) => { 
+        canvas.onmousemove = (e) => {
             console.log(e)
             //console.log调试法
             console.log(e.clientX)
@@ -30,7 +99,7 @@
             div.style.background = 'black'
             canvas.appendChild(div)
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
